force-app/main/default/objects/Answers__c/Answers__c.object-meta.xml
<CustomObject>
    <label>答案</label>
    <nameField>
        <label>Question</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>