force-app/main/default/objects/Answers__c/fields/CreateTime__c.field-meta.xml
<CustomField>
    <fullName>CreateTime__c</fullName>
    <defaultValue>NOw()</defaultValue>
    <label>CreateTime</label>
    <type>DateTime</type>
</CustomField>