force-app/main/default/objects/Answers__c/fields/CustomContract__c.field-meta.xml
<CustomField>
    <fullName>CustomContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>合同</label>
    <referenceTo>CustomContract__c</referenceTo>
    <relationshipLabel>答案</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>